--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
   "name": "custom-electron-titlebar",
-  "version": "4.1.0",
+  "version": "3.2.5",
   "description": "Custom Electron Titlebar is a library for electron that allows you to configure a fully customizable title bar.",
-  "exports": {
-    ".": "./dist/index.js",
-    "./main": "./dist/main.js"
-  },
-  "types": "dist/index.d.ts",
-  "type": "commonjs",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "build:develop": "webpack --mode=development",
-    "build": "webpack --mode=production",
-    "example": "electron example/main.js",
-    "start": "npm run build:develop && npm run example",
-    "prepare": "npm run build"
+    "build": "tsc",
+    "dev": "electron example/main.js",
+    "start": "npm run build && npm run dev"
   },
-  "author": "AlexTorresSk <alextorressk@gmail.com>",
+  "author": "Alex Torres <alextorressk@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -24,7 +18,7 @@
   "keywords": [
     "typescript",
     "electron",
-    "title bar",
+    "titlebar",
     "menubar",
     "windows",
     "linux"
@@ -35,24 +29,10 @@
   "homepage": "https://github.com/AlexTorresSk/custom-electron-titlebar#readme",
   "directories": {
     "example": "example",
-    "dist": "dist"
+    "lib": "lib"
   },
-  "peerDependencies": {
-    "electron": ">10"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/preset-env": "^7.16.11",
-    "@types/node": "^17.0.10",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.5.1",
-    "electron": "^17.0.0",
-    "sass": "^1.49.0",
-    "sass-loader": "^12.4.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.5",
-    "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.1"
+
   }
 }
